--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass",
-		"sass:watch": "sass --watch scss/style.scss  css/style.css"
+    "sass:watch": "sass --watch scss/style.scss  css/style.css"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/RodriAguilera/2da-pre-entrega#readme",
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "sass": "^1.57.1"
   }
 }
